# DoomCopy

./: Array2D.h  BlockType.cpp  BlockType.h  CMakeLists.txt  Creature.cpp  Creature.h  DoomCopy.h  Game.cpp  Game.h  List.h  Map.cpp  Map.h  MeleeEnemy.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Point.h  Projectile.cpp  Projectile.h  README.md  Ray.h  StringManager.h  Texture.h  Weapon.cpp  Weapon.h  main.cpp
old/: blockType.conf
